# ascon-prf

./: Cargo.toml  LICENSE-MIT  README.md
benches/: ascon.rs
src/: lib.rs  mac.rs  prf.rs  prng.rs
tests/: README.md  ascon_mac.json  ascon_prf.json  ascon_prfshort.json  mac.rs  prf.rs  prfshort.rs
