[package]
name = "ascon-prng"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/conradludgate/ascon-prf"
description = "Ascon-PRF is lightweight PRF. This implementation also offers an RNG based on this construction"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]

[dependencies]
ascon = "0.4.0"
rand_core = "0.6"
digest = { version = "0.10.7", features = ["mac"] }
generic-array = "0.14"
typenum = "1"

[dev-dependencies]
divan = "0.1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
libtest-mimic = "0.8"

[[bench]]
name = "ascon"
harness = false

[[test]]
name = "prf"
harness = false

[[test]]
name = "prfshort"
harness = false

[[test]]
name = "mac"
harness = false
